ui router err resolved

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <base href="/"> -->
+    <base href="/">
     <link rel="stylesheet" href="./assets/css/ignite-main.css">
     <link rel="stylesheet" href="./assets/css/generic.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -20,8 +20,8 @@
     <script src="./assets/js/angularjs/angularjs.min.js"></script>
     <script src="./assets/js/angularjs/angular-ui-router.min.js"></script>
     <script src="./assets/js/angularjs/component-router.js"></script>
+    <script src="./assets/js/jquery/jquery.min.js"></script>
     <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
-    <script src="./assets/js/jquery/jquery.min.js"></script>    
     <script src="./module/module.js"></script>  
     <script src="./controller/controller.js"></script>
     <script src="./services/factory.js"></script>
